# cv-project1-otsu

./: CMakeLists.txt  README.md
src/: main.cpp
